<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/linearLayout"
    tools:context=".UI.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="219dp"
        android:layout_height="84dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Pasword"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLogin"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#2ecc71"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpass" />

    <TextView
        android:id="@+id/or"
        android:layout_width="57dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="OR"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/dnthave"
        android:layout_width="187dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="Don't Have A account?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="187dp"
        android:layout_height="22dp"
        android:layout_marginTop="8dp"
        android:text="Forgot Password."
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dnthave" />

    <Button
        android:id="@+id/googleLogin"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#d35400"
        android:text="Continue as Google"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <Button
        android:id="@+id/facebookLogin"
        android:layout_width="362dp"
        android:layout_height="54dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#3498db"
        android:text="Continue as Facebook"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLogin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>