<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/edit_profile"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_user"
        android:title="Edit Profile" />

    <item
        android:id="@+id/delete_profile"
        android:iconTint="@color/black"
        android:icon="@drawable/ic_delete"
        android:title="Delete Profile" />




</menu>