<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart"
        android:title="Booking" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:title="Profile" />


</menu>