<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UI.UserRegister">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="264dp">


                <TextView

                    android:id="@+id/textView2"
                    android:layout_width="202dp"
                    android:layout_height="194dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="176dp"
                    android:layout_marginBottom="73dp"
                    android:text="Here's
        your First
        Step With
        us!"
                    android:textColor="@color/black"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="387dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/or"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.437"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/userEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/userPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Pasword"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Confirm Pasword"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/userAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/userAddress"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Address"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/userPhone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/userPhone"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:drawableLeft="@drawable/ic_baseline_perm_contact_calendar_24"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="Contact"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/genderSpinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <Spinner
                    android:id="@+id/genderSpinner"
                    android:layout_width="274dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/custom_input"
                    android:gravity="center"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toTopOf="@+id/userSignUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent" />


                <Button
                    android:id="@+id/userSignUp"
                    style="@style/loginButton"
                    android:layout_width="171dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#2ecc71"
                    android:text="Register"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="88dp">


                <TextView
                    android:id="@+id/or"
                    android:layout_width="137dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="132dp"
                    android:layout_marginBottom="61dp"
                    android:text="Use Other Method"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/GoogleSignin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/facebookSignin"
                    android:layout_width="52dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="121dp"
                    android:layout_marginBottom="4dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/facebookicon"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/GoogleSignin"
                    android:layout_width="52dp"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="219dp"
                    android:layout_marginBottom="4dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/googlelogo"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>